# self-gamejam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  gdd.md  run.sh
assets/kenney_tiny-ski/Tilemap/: tilemap.png~
assets/shaders/: fragment.frag  tilemap.frag  vertex.vert
assets/tiled/: map.json  map.tiled-session  map.tmx  tilemap.json
assets/tiled/objects/: PlayerSpawn.tx
src/: CMakeLists.txt  DebugCamera.cpp  DebugCamera.h  GameCamera.cpp  GameCamera.h  InputCursor.cpp  InputCursor.h  MapLoader.cpp  MapLoader.h  MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  SkiGame.cpp  SkiGame.h  Sprite.cpp  Sprite.h  main.cpp
